--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^6.0.0",
-    "jest": "^26.2.2"
+    "jest": "^26.2.2",
+    "typescript": "^3.9.7"
   }
 }
