--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "test": "npx jest",
     "watch": "npx gulp watch"
   },
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-syntax-export-default-from": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "del": "^5.1.0",
     "eslint": "^7.9.0",
