--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "prepublishOnly": "npm test",
     "test": "jest --passWithNoTests"
   },
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "dependencies": {
     "@babel/runtime": "^7.14.0"
   },
