--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "bugs": {
     "url": "https://github.com/jalik/js-benchmark/issues"
   },
-  "main": "dist/index.js",
   "esnext": "src/index.js",
+  "main": "dist/index.js",
+  "module": "src/index.js",
   "sideEffects": false,
   "scripts": {
     "build": "babel src -d dist",
