--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "bugs": {
     "url": "https://github.com/jalik/js-benchmark/issues"
   },
-  "esnext": "src/index.js",
-  "main": "dist/index.js",
-  "module": "src/index.js",
+  "esnext": "./src/index.js",
+  "main": "./dist/index.js",
+  "module": "./src/index.js",
   "sideEffects": false,
   "scripts": {
-    "build": "babel src -d dist",
-    "clean": "rimraf dist",
-    "dev": "babel --watch src -d dist",
+    "build": "babel ./src -d ./dist",
+    "clean": "rimraf ./dist",
+    "dev": "babel --watch ./src -d ./dist",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
     "prepare": "npm run clean && npm run build && npm run lint",
