--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint-fix": "eslint --fix .",
     "prepare": "npm run clean && npm run build && npm run lint",
     "prepublishOnly": "npm test",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests --coverage=true"
   },
   "files": [
     "/dist",
