--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
     "lint-fix": "eslint --fix .",
     "prepare": "npm run clean && npm run build && npm run lint",
     "prepublishOnly": "npm test",
-    "test": "jest --passWithNoTests --coverage=true"
+    "test": "jest --coverage=true"
   },
   "files": [
     "/dist",
     "/src"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.19.4"
+    "@babel/runtime": "^7.22.15"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.4",
-    "@jest/globals": "^29.2.1",
-    "eslint": "^8.25.0",
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.19",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@jest/globals": "^29.7.0",
+    "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
     "jest": "^29.2.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
