Replaced eslint-config-airbnb-base with eslint-config-standard

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     "jest": true,
     "node": true
   },
-  "extends": "airbnb-base",
+  "extends": [
+    "eslint:recommended",
+    "standard",
+    "plugin:import/recommended"
+  ],
   "plugins": [
     "import",
     "jest"
