--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,17 @@
   "extends": [
     "eslint:recommended",
     "standard",
-    "plugin:import/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript"
   ],
-  "plugins": [
-    "import",
-    "jest"
-  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "rules": {
-    "import/prefer-default-export": "warn"
-  }
+    "@typescript-eslint/ban-ts-comment": "warn"
+  },
+  "root": true
 }
