--- a/package.json
+++ b/package.json
@@ -19,38 +19,46 @@
   "bugs": {
     "url": "https://github.com/jalik/js-benchmark/issues"
   },
-  "esnext": "./src/index.js",
-  "main": "./dist/index.js",
-  "module": "./src/index.js",
+  "type": "module",
   "sideEffects": false,
-  "scripts": {
-    "build": "babel ./src -d ./dist",
-    "clean": "rimraf ./dist",
-    "dev": "babel --watch ./src -d ./dist",
-    "lint": "eslint .",
-    "lint-fix": "eslint --fix .",
-    "prepare": "npm run clean && npm run build && npm run lint",
-    "prepublishOnly": "npm test",
-    "test": "jest --coverage=true"
-  },
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "types": "./esm/index.d.ts",
   "files": [
-    "/dist",
-    "/src"
+    "cjs/",
+    "esm/",
+    "LICENSE.txt",
+    "README.md"
   ],
-  "dependencies": {
-    "@babel/runtime": "^7.22.15"
+  "scripts": {
+    "build": "npm run build-cjs && npm run build-esm",
+    "build-cjs": "tsc -p tsconfig.cjs.json",
+    "build-esm": "tsc",
+    "clean": "rimraf ./cjs ./esm",
+    "dev-cjs": "tsc --watch -p tsconfig.cjs.json",
+    "dev-esm": "tsc --watch",
+    "dev": "concurrently 'npm:dev-*'",
+    "lint": "eslint --ext .ts .",
+    "lint-fix": "eslint --ext .ts --fix .",
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "npm run lint && npm test",
+    "test": "jest --passWithNoTests --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
     "@babel/core": "^7.22.19",
-    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.28.5",
     "@jest/globals": "^29.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "concurrently": "^9.2.1",
     "eslint": "^8.49.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.2.3",
     "jest": "^29.2.1",
+    "rimraf": "^6.1.2",
     "typescript": "^4.9.5"
   }
 }
