chore: replace jest with vitest

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/jalik/js-benchmark/issues"
   },
-  "type": "module",
   "sideEffects": false,
   "main": "./cjs/index.js",
   "module": "./esm/index.js",
@@ -42,23 +41,22 @@
     "lint-fix": "eslint --ext .ts --fix .",
     "prepare": "npm run clean && npm run build",
     "prepublishOnly": "npm run lint && npm test",
-    "test": "jest --passWithNoTests --coverage"
+    "test": "vitest run --passWithNoTests --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
-    "@jest/globals": "^29.7.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^4.0.13",
     "concurrently": "^9.2.1",
     "eslint": "^8.49.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "jest": "^29.7.0",
     "rimraf": "^6.1.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.13"
   }
 }
