--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@vitest/coverage-v8": "^4.0.15",
     "concurrently": "^9.2.1",
     "eslint": "^9.15.0",
+    "eslint-plugin-import": "^2.32.0",
     "rimraf": "^6.1.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.7.0",
