--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "build-cjs": "tsc -p tsconfig.cjs.json",
     "build-esm": "tsc",
     "clean": "rimraf ./cjs ./esm",
+    "dev": "concurrently 'npm:dev-*'",
     "dev-cjs": "tsc --watch -p tsconfig.cjs.json",
     "dev-esm": "tsc --watch",
-    "dev": "concurrently 'npm:dev-*'",
     "lint": "eslint --config eslint.config.mjs .",
     "lint-fix": "eslint --config eslint.config.mjs --fix .",
     "prepare": "npm run clean && npm run build",
     "prepublishOnly": "npm run lint && npm test",
-    "test": "vitest run --passWithNoTests --coverage",
-    "preversion": "npm run lint && npm run test"
+    "preversion": "npm run prepublishOnly",
+    "test": "vitest run --passWithNoTests --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
